# TechnicalStockPrediction

./: .gitignore  .mcp.json  ALL_HALAL_STOCKS.txt  CLAUDE.md  Initial_prompt.md  MANIFEST.md  README.md  V2_DEVELOPMENT_PLAN.md  V3_ACTION_PLAN.md  V3_TUNING_REPORT.html  V3_VALIDATION_RESULTS.md  halal_stocks_usa.md
.claude/spec/: design.md  requirement.md  task.md
.claude/spec/trade-engine/: design.md  requirement.md  task.md
.kiro/hooks/: code-quality-analyzer.kiro.hook  update-manifest.kiro.hook  update-readme-on-code.kiro.hook  update-steering-on-code.kiro.hook
.kiro/skills/: mcp-massive-financial-data-guide.md
.kiro/specs/bullish-stock-scanner/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/trade-engine/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: <async_generator object temp_db at 0x12eb8cf40>  analyze_fp.py  config.py  error_analysis.py  generate_report.py  main.py  pyproject.toml  pytest.ini  requirements.txt  tune_v3.py  validate_v3.py
backend/api/: backtest_endpoints.py  backtest_models.py  endpoints.py  intel_endpoints.py  models.py
backend/backtest/: __init__.py  engine.py  metrics.py
backend/core/: api_client.py  halal_universe.py  indicator_calculator.py  massive_client.py  models.py  orchestrator.py  pattern_detector.py  ranking_service.py  regime_analyzer.py  scan_store.py  scoring_engine.py  stage_classifier.py  stock_intelligence.py  trade_calibration.py  trade_engine.py  universe_builder.py
backend/data/: trade_calibration.json
backend/scripts/: __init__.py  analyze_fp.py  comprehensive_backtest.py  trade_backtest.py  trade_plan_proto.py  tune_v3.py  validate_v3.py
backend/tests/backtest/: __init__.py  test_metrics.py  test_predicted_bullish.py
backend/tests/integration/: test_endpoints_integration.py  test_intel_endpoint.py  test_main.py  test_scan_endpoint.py  test_scoring_pipeline.py  test_trade_engine_integration.py  test_trade_plan_endpoint.py  test_universe_api.py  test_v3_pipeline.py
backend/tests/property/: conftest.py  test_api_client_properties.py  test_indicators_properties.py  test_ranking_properties.py  test_regime_properties.py  test_scoring_properties.py  test_trade_engine_properties.py  test_universe_properties.py
backend/tests/unit/: test_api_client.py  test_endpoints.py  test_halal_universe.py  test_indicator_calculator.py  test_massive_client.py  test_orchestrator.py  test_ranking_service.py  test_regime_analyzer.py  test_scan_store.py  test_scoring_engine.py  test_stock_intelligence.py  test_trade_engine.py  test_universe_builder.py
backend/utils/: logging.py
data/: halal_tickers_for_scanner.txt  trade_calibration.json
docs/: MANIFEST.md  TRADE_ENGINE_COMPREHENSIVE_RESULTS.md  TRADE_ENGINE_RESULTS.md  V2_ACTION_PLAN.md  V3_TUNING_REPORT.html  V3_TUNING_REPORT.md  V3_VALIDATION_RESULTS.md  V3_tuning_data.csv  backtest_report_v2.html
frontend/: COMPONENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BacktestPanel.tsx  ErrorMessage.tsx  LoadingIndicator.tsx  MarketRegimeBadge.tsx  ResultsTable.tsx  ScanButton.tsx  ScanProgress.tsx  SignalBadges.tsx  StockIntelligenceModal.tsx  TradePlanDetail.tsx
frontend/src/services/: backtestApi.ts  scanApi.ts
frontend/src/types/: backtest.ts  intelligence.ts  scan.ts
frontend/src/utils/: scanReport.ts
frontend/test-results/: .last-run.json
frontend/tests/: App.test.tsx
frontend/tests/e2e/: comprehensive-test.spec.ts  (+16 more)
(+8 files in other folders)
